--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.agrocraft_1">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AgroCraft_1">
+        <activity
+            android:name=".FarmerHomeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".FarmerRegisterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".FarmerLoginActivity"
+            android:exported="true" />
         <activity
             android:name=".HomeActivity"
             android:exported="true" />
