--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
             android:exported="true" />
         <activity
             android:name=".FarmerAddProduct"
-            android:name=".CheckoutActivity"
             android:exported="true" />
+<!--                    android:name=".CheckoutActivity"-->
         <activity
             android:name=".DetailActivity"
             android:label="@string/title_activity_detail"
