--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.firebaseui:firebase-ui-database:5.0.0'
     implementation "com.android.support:support-core-utils:28.0.0"
-    implementation "com.android.support:design:28.0.0"
+    implementation "com.android.support:design:28.0.0-alpha1"
     implementation "androidx.cardview:cardview:1.0.0"
 
     implementation "androidx.recyclerview:recyclerview:1.2.1"
