--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AgroCraft_1">
         <activity
+            android:name=".FarmerMyTransactions"
+            android:exported="true" />
+        <activity
             android:name=".FarmerMyProduct"
             android:exported="true" />
         <activity
@@ -59,10 +62,10 @@
         <activity
             android:name=".RegisterActivity"
             android:exported="true" />
-
         <activity
             android:name=".CheckoutActivity"
             android:exported="true" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
